Fix modal visibility and add modal functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -836,15 +836,15 @@ input {
   opacity: 0; /* Повна видимість */
   pointer-events: none; /* Вимікаємо взаємодію з елементом */
 
-  visibility: visible; /* Видимий елемент */
+  visibility: hidden; /* Видимий елемент */
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); /* Плавна анімація появи/зникнення */
 }
 
 /* Клас для приховування модального вікна */
-.backdrop .is-open {
+.backdrop.is-open {
   opacity: 1; /* Повна прозорість */
-  visibility: hidden; /* Приховуємо(hidden) елемент */
+  visibility: visible; /* Приховуємо(hidden) елемент */
   pointer-events: auto; /* Вимікаємо взаємодію з елементом */
 }
 
@@ -865,8 +865,8 @@ input {
 }
 
 /* Анімація появи модального вікна */
-.backdrop.is-hidden .modal-window {
-  transform: scale(0.5); /* Зменшуємо розмір при приховуванні */
+.backdrop:not(.is-open) .modal-window {
+  transform: translate(-50%, -50%) scale(1.5);
 }
 
 /* Кнопка закриття модального вікна */
